--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
+
 <html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Space Invaders kopio</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <canvas id="canvas" width="800" height="500"></canvas>
         
         <script src="script.js"></script>
     </body>
