moved image to folder and fixed player

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <canvas id="canvas" width="800" height="500"></canvas>
-        <img src="Pear-.png" alt="" id="source">
+        <img src="images/Pear-.png" alt="" id="source">
         <script src="script.js"></script>
     </body>
 </html>
