add menu screen

--- a/gameplay.html
+++ b/gameplay.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="fi">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +8,8 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Space Invaders</h1>        
-        <h2><a href="gameplay.html">Pelaa</a></h2>
-        <h2><a href="ohjeet.html">Ohjeet</a></h2>
+        <canvas id="canvas" width="800" height="650"></canvas>
+        <img src="images/Pear-.png" alt="" id="source">
+        <script src="script.js"></script>
     </body>
 </html>
