--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <body>
         <canvas id="canvas" width="800" height="500"></canvas>
         <img src="images/Pear-.png" alt="" id="source">
+        <img src="images/bullet2.jpg" alt="" id="bulletImg">
         <script src="script.js"></script>
     </body>
 </html>
