--- a/gameplay.html
+++ b/gameplay.html
@@ -9,7 +9,9 @@
     </head>
     <body>
         <canvas id="canvas" width="800" height="650"></canvas>
-        <img src="images/Pear-.png" alt="" id="source">
+        <!-- <img src="images/Pear-.png" alt="" id="playerImage"> -->
+        <img src="images/bullet15..png" alt="" id="bulletImage">
+        <img src="images/hokane.png" alt="" id="playerImage">
         <script src="script.js"></script>
     </body>
 </html>
