--- a/ohjeet.html
+++ b/ohjeet.html
@@ -5,8 +5,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Ohjeet</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <p>Ohjeet tänne</p>
+        <h1>Ohjeet</h1>
+        <h2>Vasen nuolinäppäin: Liiku vasemmalle</h2>
+        <h2>Oikea nuolinäppäin: Liiku oikealle</h2>
+        <h2>Ylä nuolinäppäin tai välilyönti: Ammu</h2>
+        <h2><a href="index.html">Takaisin</a></h2>
     </body>
 </html>
