--- a/gameplay.html
+++ b/gameplay.html
@@ -12,6 +12,9 @@
         <!-- <img src="images/Pear-.png" alt="" id="playerImage"> -->
         <img src="images/bullet15..png" alt="" id="bulletImage">
         <img src="images/hokane.png" alt="" id="playerImage">
+        <img src="images/bullet_pierce_up.png" alt="" id="bulletPierceImage">
+        <img src="images/bullet_speed_up.png" alt="" id="bulletSpeedImage">
+        <img src="images/bullet_size_up.png" alt="" id="bulletSizeImage">
         <script src="script.js"></script>
     </body>
 </html>
