--- a/gameplay.html
+++ b/gameplay.html
@@ -15,6 +15,7 @@
         <img src="images/bullet_pierce_up.png" alt="" id="bulletPierceImage">
         <img src="images/bullet_speed_up.png" alt="" id="bulletSpeedImage">
         <img src="images/bullet_size_up.png" alt="" id="bulletSizeImage">
+        <img src="images/invader.png" alt="" id="enemyImage" >
         <script src="script.js"></script>
     </body>
 </html>
