Create seperate file for JS handling the enemies

--- a/gameplay.html
+++ b/gameplay.html
@@ -16,6 +16,6 @@
         <img src="images/bullet_speed_up.png" alt="" id="bulletSpeedImage">
         <img src="images/bullet_size_up.png" alt="" id="bulletSizeImage">
         <img src="images/invader.png" alt="" id="enemyImage" >
-        <script src="script.js"></script>
+        <script src="script.js" type="module"></script>
     </body>
 </html>
