fix pause screen and add game over screen

--- a/ohjeet.html
+++ b/ohjeet.html
@@ -12,6 +12,7 @@
         <h2>Vasen nuolinäppäin: Liiku vasemmalle</h2>
         <h2>Oikea nuolinäppäin: Liiku oikealle</h2>
         <h2>Ylä nuolinäppäin tai välilyönti: Ammu</h2>
+        <h2>Esc: Tauota peli</h2>
         <h2><a href="index.html">Takaisin</a></h2>
     </body>
 </html>
